2006-9-13  Onkar Shinde  <onkarshinde@users.sourceforge.net>
	* Fixed some assertion failures while closing window
	* Some clenup

2006-09-11 Aanjhan Ranganathan <aanjhan@gmail.com>
	* Solved bug on DAA Instruction

2006-8-11  Onkar Shinde  <onkarshinde@users.sourceforge.net>
	* Use gtk stock items for some of the menus
	* Change configure script to check GTK+ >= 2.6.0

2006-8-07  Onkar Shinde  <onkarshinde@users.sourceforge.net>
	* Fixed a bug with menus being disabled while debugging
	* Addded url handler for about dialog
	* Disable file actions and reset actions while debugging

2006-8-05  Onkar Shinde  <onkarshinde@users.sourceforge.net>
	* Migrated menus and toolbar from GnomeUIInfo to GtkAction,
	GtkActionGroup, GtkUIManager system.
	* As result of the above, keyboard shortcuts actually work.
	* Changed keyboard shortcuts for some menus.

2006-7-31  Onkar Shinde  <onkarshinde@users.sourceforge.net>
	* Replaced GtkFileSelecton with GtkFileChooserDialog.
	* Replaced GnomeAbout with GtkAboutDialog.
	* Compilation will need GTK+ 2.6 at least.

2006-7-20  Onkar Shinde  <onkarshinde@users.sourceforge.net>
	* Apply patch 964792 submitted by Alexander Shigin. Corrects 'PUSH
	PSW' instruction behaviour.

2006-7-20  Onkar Shinde  <onkarshinde@users.sourceforge.net>
	* Update to scintilla 1.66
	* Updated build scripts

2004-01-25  Sridhar Ratna  <srid@nearfar.org>
	* 8085-instructions.h: removed 'extern' just before G_END_DECLS (fixes string.h bug)
	* *.*: _() macro, now working
	* glade: icon for all dialogs

2004-01-01  Sridhar Ratna  <srid@nearfar.org>
	* gui-app.c: removed gdk* functions
	* *.c: encapsulated all strings in _() macro for translation

2003-12-30  Sridhar Ratna  <srid@nearfar.org>
	* 8085-instructions.c: In _eef_inst_func_47, fixed ~(instead of !)
	* 8085-instructions.c: In _eef_is_carry, return value of op '-' changed
	* 8085-instructions.c: ADD, ADC, SUB, SBB M bug fixed