@@ -935,26 +935,29 @@ _eef_inst_func_38 (eef_addr_t opnd_addr)
 static gint
 _eef_inst_func_39 (eef_addr_t opnd_addr)
 {
-	eef_data_t low;
+        eef_data_t low;
         eef_data_t high;
-	eef_addr_t big = sys.reg.a;
 
-	high = sys.reg.a >> 4;
-	low = sys.reg.a & 0x0F;
+        low = sys.reg.a & 0x0F;
 
-	if (low > 9 || sys.flag.ac)
-		big += 6;
-	sys.flag.ac = 1;	/* FIXME : ? */
-	if (high > 9 || sys.flag.c)
-		big += (6 << 4);
-
-	sys.reg.a = big;
-	if (sys.reg.a != big)
-		sys.flag.c = 1;
-	else
-		sys.flag.c = 0;
-
-	return 0;
+        if (low > 9 || sys.flag.ac)
+        {
+                sys.reg.a += 6;
+                if((low + 6) > 9)
+                        sys.flag.ac = 1;     
+                else 
+                        sys.flag.ac = 0;
+        }
+        high = sys.reg.a >> 4;
+        if (high > 9 || sys.flag.c)
+        {
+                sys.reg.a += (6 << 4);
+                if((high + 6) > 9)
+                        sys.flag.c = 1;
+                else 
+                        sys.flag.c = 0;
+        }
+        return 0;
 }
 
 static gint
